#pragma once

enum class Color{
    White,
    Black,
};
